--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+# Videos/outputs
+*.json
+*.mp4
+*.mov
+videos/
+labels/
+
+# Misc
+.DS_Store
+.idea
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
